2018-02-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-954

	* src/m_cloudradar.cc (iyActiveSingleScat2): Started. Work in progress.

	* src/m_transmitter.cc (iyTransmissionStandard2): Removed
	scat_data_checked as input WSM.

	* src/rte.cc (get_ppath_cloudvars): Spelling in a comment

2018-02-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-953

	* src/m_montecarlo.cc (MCRadar): There was a crash if stokes_dim
	was < 3 (due to isnan(Ihold[2])). Changed code to handle stokes_dim>2.
	Now also checked that stokes_dim>=2.

2018-02-16  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-952

	* src/m_surface.cc:
	- removed trailing white spaces
	- added surfaceTelsem method to compute land surface emissivities
	  using TELSEM2
	- fixed bug in surfaceFlatRvRh

	* src/m_telsem.cc:
	- added telsemSurfaceTypeLandSea WSM to produce a land/sea mask
	according to TELSEM2 data.
	- added telsem_atlasReadAscii to read a single atlas.

	* src/methods.cc:
	- added surfaceTelsem, telsemSurfaceTypeLandSea, telsem_atlasReadAscii
	WSMs

	* src/telsem.[h,cc]:
	- added some checks to avoid memory errors for invalid inputs

2018-02-15  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-951

	* 3rdparty/wigner/wigxjpf/CMakeLists.txt:

	Remove calc_float128.c and c_wrap_float128.c from sources.
	Not needed because we don't use quadmath. Fixes compilation failure
	with Clang which doesn't support __float128.

2018-02-15  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-950

	* 3rdparty/wigxjpf:  Moved to 3rdparty/wigner/wigxjpf. Also
	commented out Makefile reference to QUADMATH as the only difference
	from original as found at:  http://fy.chalmers.se/subatom/wigxjpf/
	
	* 3rdparty/wigner/fastwigxj:  Added. Also	commented out Makefile 
	reference to QUADMATH from original as found at:
	http://fy.chalmers.se/subatom/fastwigxj/
	
	After work by Håkan T. Johansson of Chalmers, using fastwigxj to