@@ -10209,10 +10209,6 @@ void define_md_data_raw()
           "before the condition set by *mc_std_err* is considered. Values\n"
           "of *mc_min_iter* below 100 are not accepted.\n"
           "\n"
-          "Negative values of *mc_seed* seed the random number generator\n"
-          "according to system time, positive *mc_seed* values are taken\n"
-          "literally.\n"
-          "\n"
           "Only \"1\" and \"RJBT\" are allowed for *iy_unit*. The value of\n"
           "*mc_error* follows the selection for *iy_unit* (both for in- and\n"
           "output.\n"
@@ -10270,11 +10266,6 @@ void define_md_data_raw()
           "The method will terminate once the max_iter criterium is met.\n"
           "If negative values are given for these parameters then it is\n"
           "ignored.\n"
-          
-          "\n"
-          "Negative values of *mc_seed* seed the random number generator\n"
-          "according to system time, positive *mc_seed* values are taken\n"
-          "literally.\n"
           "\n"
           "Only \"1\" and \"Ze\" are allowed for *iy_unit*. The value of\n"
           "*mc_error* follows the selection for *iy_unit* (both for in- and\n"
